@@ -1,3 +1,8 @@
+2004-11-08 Alain Magloire
+	New class ICDIFunctionFinished.
+	It return the return value of the function.
+	* cdi/org/eclipse/cdt/debug/mi/core/cdi/ICDIFunctionFinished.java
+
 2004-11-04 Mikhail Khodjaiants
 	Removed "Refresh" and "Auto-Refresh" actions support for shared libraries.
 	* ICDebugConstants.java
